--- a/TODO.txt
+++ b/TODO.txt
@@ -6,7 +6,7 @@
 # [X] Ehnance and fix cargo behavior
 # [X] Implement on-screen scoring for bosses
 # [X] Implement on-screen scoring for challenge waves
-# [ ] Handle other kind of enemies: transforms (Scorpion, Bosconian, Galaxian)
-# [ ] Implement on-screen scoring for transforms triple
+# [X] Handle other kind of enemies: transforms (Scorpion, Bosconian, Galaxian)
+# [X] Implement on-screen scoring for transforms triple
 # [ ] Design and implement other challenge stages (> 3) and put in Dragonfly, Mosquito & Enterprise
 # -----------------
