Scoring bug fixed

--- a/TODO.txt
+++ b/TODO.txt
@@ -3,7 +3,7 @@
 # [X] Design and implement movement pattern for bosses
 # [ ] Refine, fix and tune attack algorithm
 # [X] Fix capture beam collision with fighter
-# [X] Ehnance and fix cargo behavior
+# [X] Ehnance and fixed cargo behavior
 # [X] Implement on-screen scoring for bosses
 # [X] Implement on-screen scoring for challenge waves
 # [X] Handle other kind of enemies: transforms (Scorpion, Bosconian, Galaxian)
